Add contact form

--- a/ernieshigh.html
+++ b/ernieshigh.html
@@ -116,6 +116,18 @@
     </main>
     <section class="bottom-content">
         <h2> More Stuff</h2>
+        <div class="container-row">
+            <article class="more-content">
+                <a href="contact.html" title="HTML Form">
+                    <h3>HTML Form</h3>
+                    <picture>
+                        <source srcset="image/html-form.webp">
+                        <img src="image/html-form.webp" alt="Example of an HTML form" width="200" height="366">
+                    </picture>
+                </a>
+            </article>
+        </div>
+
     </section>
     <footer>
         <div class="footer-content">
