--- a/fungi/index.html
+++ b/fungi/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <title>Ernies High - A static HTML page</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Outfit:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-  </head>
+  <title>Ernies High - A static HTML page</title>
 
-  <body>
-    <header class="main-head">
-      <img src="assets/fungi-finders.svg" alt="Fungi" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&family=Outfit:wght@100..900&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/style.css" />
+</head>
 
-      <nav class="main-nav">
-        <ul>
-          <li><a href="/">Discover</a></li>
-          <li><a href="/">Guide</a></li>
-          <li><a href="/">FAQ</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <section class="hero">
-        <h1>Discover the World ofMushroom Foraging</h1>
+<body>
+  <header class="main-head">
+    <div class="content header-content">
+      <div class="inner-head">
+        <img src="assets/fungi-finders.svg" alt="Fungi" />
+
+        <nav class="main-nav">
+          <ul>
+            <li><a href="/">Discover</a></li>
+            <li><a href="/">Guide</a></li>
+            <li><a href="/">FAQ</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main>
+    <section class="hero section flow" data-padding="compact">
+      <div class="content">
+        <h1 class="hero-title">Discover the World of <span>Mushroom Foraging</span></h1>
+      </div>
+      <div class="content flow" data-width="narrow">
         <p>
           Mushroom foraging is the art and science of identifying and collecting
           wild mushrooms.
@@ -44,22 +50,21 @@
           But beware – this hobby requires careful study and respect for nature,
           as some mushrooms can be dangerous if misidentified.
         </p>
-      </section>
-      <section>
-        <h2>The joys of mushroom foraging</h2>
+      </div>
+    </section>
+    <section class="section">
+      <div class="content flow">
+        <h2 class="section-heading">The joys of mushroom foraging</h2>
         <p>
           Foraging for mushrooms can be a rewarding experience for many reasons.
           People may venture off into the woods to forage for mushrooms because
           it allows them to connect with nature, enjoy the thrill of the hunt,
           and savor the satisfaction of finding a hidden culinary treasure.
         </p>
-        <div>
+        <div class="column ">
           <div class="card">
-            <img
-              src="assets/outdoor-exploration.webp"
-              alt="Outdoor Exploration Shrumes"
-            />
-            <h3>Outdoor Exploration</h3>
+            <img src="assets/outdoor-exploration.webp" alt="Outdoor Exploration Shrumes" />
+            <h3 class="card-title">Outdoor Exploration</h3>
             <p>
               Mushroom foraging takes you off the beaten path and into the heart
               of nature. Learn to read the landscape, identifying prime mushroom
@@ -69,11 +74,8 @@
             </p>
           </div>
           <div class="card">
-            <img
-              src="assets/botanical-expertise.webp"
-              alt="Botanical Expertise"
-            />
-            <h3>Botanical Expertise</h3>
+            <img src="assets/botanical-expertise.webp" alt="Botanical Expertise" />
+            <h3 class="card-title">Botanical Expertise</h3>
             <p>
               Dive into the intricate world of fungal biology. Discover the
               unique structures of mushrooms, from caps to gills to spores.
@@ -85,7 +87,7 @@
           </div>
           <div class="card">
             <img src="assets/culinary-delight.webp" alt="Culinary Delights" />
-            <h3>Culinary Delights</h3>
+            <h3 class="card-title">Culinary Delights</h3>
             <p>
               Transform your foraged finds into delectable dishes. Many edible
               mushrooms offer unique flavors and textures that can elevate your
@@ -96,63 +98,66 @@
             </p>
           </div>
         </div>
-      </section>
-      <section>
-        <h2>Start your <span class="orange">Foraging Adventure!</span></h2>
+      </div>
+    </section>
+    <section class="section bg-accent">
+      <div class="content flow font-size-lg text-high-contrast text-center" data-width="narrow" data-padding="compact">
+        <h2 class="section-heading">Start your <span class="text-brand">Foraging Adventure!</span></h2>
         <p>
           Whether you're seeking a deeper connection with nature, a new outdoor
           hobby, or simply love the idea of finding your own food, mushroom
           foraging offers a uniquely rewarding experience.
         </p>
-      </section>
-      <section>
-        <div>
-          <div>
-            <div class="left-col">
-              <img
-                src="assets/experts 1.jpg"
-                alt="Get to know your mushrooms"
-              />
-            </div>
-            <div class="right-col">
-              <h2>Get to know your mushrooms</h2>
-              <p>
-                Successful and safe mushroom foraging begins with a deep
-                understanding of the species you'll encounter in the wild - not
-                just what the edible ones look like, but their toxic
-                look-alikes, seasonal patterns, and preferred habitats. It can
-                feel like a big task, but we’ve got a handy reference guide to
-                help you out!/p>
-                <a class="button" href=""
-                  >Reference Guide
-                  <span class="visually-hidden">
-                    about mushrooms with our helpful reference guide
-                  </span></a
-                >
-              </p>
-            </div>
+      </div>
+    </section>
+    <section class="section bg-extra-dark">
+      <div class="content " data-width="wide">
+        <div class="column" data-gap="large" data-align="center">
+          <div class="left-col">
+            <img src="assets/experts 1.jpg" alt="Get to know your mushrooms" />
           </div>
-          <div>
-            <div class="left-col">
-              <h2>Connect with Nature</h2>
-              <p>
-                Experience the beauty of the great outdoors while foraging for
-                mushrooms with fellow enthusiasts.
-              </p>
-              <a class="button" href=""
-                >Learn More
-                <span class="visually-hidden">
-                  about mushrooms with our helpful reference guide
-                </span></a
-              >
-            </div>
-            <div class="right-col">
-              <img src="assets/nature.webp" alt="Connect with Nature" />
-            </div>
+          <div class="right-col flow font-size-lg">
+            <h2 class="section-heading">Get to know your mushrooms</h2>
+            <p>
+              Successful and safe mushroom foraging begins with a deep
+              understanding of the species you'll encounter in the wild - not
+              just what the edible ones look like, but their toxic
+              look-alikes, seasonal patterns, and preferred habitats. It can
+              feel like a big task, but we’ve got a handy reference guide to
+              help you out!</p>
+            <a class="button" href="">Reference Guide
+              <span class="visually-hidden">
+                about mushrooms with our helpful reference guide
+              </span></a>
+            </p>
           </div>
         </div>
-      </section>
-    </main>
-    <footer class="site-footer"></footer>
-  </body>
+    </section>
+    <section class="section">
+      <div class="content" data-width="wide">
+        <div class="column" data-gap="large" data-align="center">
+          <div class="left-col flow font-size-lg">
+            <h2 class="section-heading">Connect with Nature</h2>
+            <p>
+              Experience the beauty of the great outdoors while foraging for
+              mushrooms with fellow enthusiasts.
+            </p>
+            <a class="button" href="">Learn More
+              <span class="visually-hidden">
+                about mushrooms with our helpful reference guide
+              </span></a>
+          </div>
+          <div class="right-col">
+            <img src="assets/nature.webp" alt="Connect with Nature" />
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="site-footer">
+    <p> Happy Foraging</p>
+    <a href="#">ernie@ernieshigh.dev</a>
+  </footer>
+</body>
+
 </html>
