--- a/fungi/index.html
+++ b/fungi/index.html
@@ -19,7 +19,10 @@
     <div class="content header-content">
       <div class="inner-head">
         <img src="assets/fungi-finders.svg" alt="Fungi" />
-
+        <button aria-controls="main-nav" aria-expanded="false">
+          <span class="visually-hidden">Menu Button</span>
+          <img src="assets/hamburger.svg" alt="show mobile menu button">
+        </button>
         <nav class="main-nav">
           <ul>
             <li><a href="/">Discover</a></li>
