--- a/fungi/index.html
+++ b/fungi/index.html
@@ -35,7 +35,7 @@
     </div>
   </header>
   <main>
-    <section class="hero section flow" data-padding="compact">
+    <section class="hero wtf section flow" data-padding="compact">
       <div class="content">
         <h1 class="hero-title">Discover the World of <span>Mushroom Foraging</span></h1>
       </div>
