--- a/fungi/index.html
+++ b/fungi/index.html
@@ -20,10 +20,12 @@
     <div class="content header-content">
       <div class="inner-head">
         <img src="assets/fungi-finders.svg" alt="Fungi" />
+
         <button aria-controls="main-nav" aria-expanded="false">
           <span class="visually-hidden">Menu Button</span>
           <img src="assets/hamburger.svg" alt="show mobile menu button">
         </button>
+
         <nav class="main-nav">
           <ul>
             <li><a href="/">Discover</a></li>
@@ -35,7 +37,7 @@
     </div>
   </header>
   <main>
-    <section class="hero wtf section flow" data-padding="compact">
+    <section class="hero section flow" data-padding="compact">
       <div class="content">
         <h1 class="hero-title">Discover the World of <span>Mushroom Foraging</span></h1>
       </div>
