--- a/fungi/index.html
+++ b/fungi/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+  <a class="skip-nav" href="#main">Skip to main</a>
   <header class="main-head">
     <div class="content header-content">
       <div class="inner-head">
@@ -36,7 +37,7 @@
       </div>
     </div>
   </header>
-  <main>
+  <main id="main">
     <section class="hero section flow" data-padding="compact">
       <div class="content">
         <h1 class="hero-title">Discover the World of <span>Mushroom Foraging</span></h1>
