--- a/fungi/index.html
+++ b/fungi/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <a class="skip-nav" href="#main">Skip to main</a>
+  <a class="wtf skip-nav" href="#main">Skip to main</a>
   <header class="main-head">
     <div class="content header-content">
       <div class="inner-head">
