--- a/fungi/index.html
+++ b/fungi/index.html
@@ -30,8 +30,8 @@
         <nav class="main-nav">
           <ul>
             <li><a href="/">Discover</a></li>
-            <li><a href="/">Guide</a></li>
-            <li><a href="/">FAQ</a></li>
+            <li><a href="guide.html">Guide</a></li>
+            <li><a href="guide.html#faq">FAQ</a></li>
           </ul>
         </nav>
       </div>
@@ -120,10 +120,10 @@
     <section class="section bg-extra-dark">
       <div class="content " data-width="wide">
         <div class="column" data-gap="large" data-align="center">
-          <div class="left-col">
+          <div class="eq-col">
             <img src="assets/experts 1.jpg" alt="Get to know your mushrooms" />
           </div>
-          <div class="right-col flow font-size-lg">
+          <div class="eq-col flow font-size-lg">
             <h2 class="section-heading">Get to know your mushrooms</h2>
             <p>
               Successful and safe mushroom foraging begins with a deep
@@ -143,7 +143,7 @@
     <section class="section">
       <div class="content" data-width="wide">
         <div class="column" data-gap="large" data-align="center">
-          <div class="left-col flow font-size-lg">
+          <div class="eq-column flow font-size-lg">
             <h2 class="section-heading">Connect with Nature</h2>
             <p>
               Experience the beauty of the great outdoors while foraging for
@@ -154,7 +154,7 @@
                 about mushrooms with our helpful reference guide
               </span></a>
           </div>
-          <div class="right-col">
+          <div class="eq-column">
             <img src="assets/nature.webp" alt="Connect with Nature" />
           </div>
         </div>
